--- a/css/main.css
+++ b/css/main.css
@@ -175,7 +175,7 @@ COntent1 started */
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 120%;
+    height: 150%;
     background-color: #edecec;
     
 }
@@ -190,7 +190,7 @@ COntent1 started */
 .card{
     float: left;
     margin: 10px 15px;
-    height: 48%;
+    height: 45%;
     width: 47%;
     background-color: whitesmoke;
 
@@ -208,29 +208,119 @@ COntent1 started */
     width: 100%;
     height: 30%;
     background-color:white;
+    font-size: 14px;
+    font-weight: 600;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 
+}
+
+.smname{
+    margin-left: 20px;
+    margin-top: 10px;
+    display: flex;
+}
+
+.name{   
+    font-size: 10px;
+    opacity: .2;
+    margin-bottom: 6px;
+    letter-spacing: 2px;
+    word-spacing: 2px;
+} 
+
+.profession{
+    font-size: 10px;
+    opacity: 0.9;
+}
+.heading{
+    margin-top: 20px;
+    margin-left: 20px;
+    font-size:20px ;
+    font-weight: 400;
+}
+.hr3{
+    margin-top: 2px;
+    margin-left: 20px;
+    width: 160px;
+    height: 2px;
+    background-color: greenyellow;
+    
+}
+.para{
+    margin-top: 5px;
+    margin-left: 20px;
+    font-size: 14px;
+    font-weight: 400;
+}
+.para1{
+    margin-top: 5px;
+    margin-left: 20px;
+    font-size: 14px;
+    font-weight: 400;
+}
+.date{
+    margin-top: 3px;
+    margin-left:430px;
 }
 
 /* card designing ended */
 
 /* new content started*/
 #content3{
+    display: flex;
     width: 100%;
     height: 80%;
     background-color: #f3f3f3;
     padding: 120px 210px;
-    display: flex;
+    justify-content: space-between;
+   
 }
 
 #content-in{
     width: 35%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    font-size: 15px;
+
+}
+
+
+#content-in>hr{
+    
+    width: 20px;
 }
 
 #imgcntnt{
     width: 60%;
     height: 100%;
-    background-color: #bbb8b8 ;
+    background-image: url("../image/blogup.jpg");
+    background-position: center;
+    background-size: cover;
+}
+
+#shopnow{
+    border: 3px solid green;
+    padding:10px 10px 10px 10px ;
+    width: 250px;
+    height: 40px;
+    color: green;
+
+
+}
+
+#one{
+    position: relative;
+    top: 50%;
+    left: 95%;
+}
+
+#two{
+    position: relative;
+    top: 50%;
 }
 
 /* new content4 started*/
@@ -238,8 +328,9 @@ COntent1 started */
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 120%;
+    height: 160%;
     background-color: #edecec;
+    color: black;
     
 }
 
@@ -250,16 +341,19 @@ COntent1 started */
     flex-direction: column;
     width: 100%;
     height: 100%;
-    background-color: #dfcccc;
+    background-color: #e7e6e6;
     align-items: center;
 }
 
-#content5>hr{
+#content5>hr:nth-child(1){
     width: 500px;
+    margin-top:100px;
+    margin-bottom: 20px;
 }
 
 
 #header{
+    margin-bottom: 25px;
 
 }
 #smcards{
@@ -267,22 +361,55 @@ COntent1 started */
     justify-content: space-around;
     height: 45%;
     width: 65%;
+    margin-bottom: 15px;
 }
 .mcard{
     width: 22%;
     height: 98%;
-    background-color: rgb(212, 169, 169);
 }
 
 .img{
     width:100%;
     height: 55%;
-    background-color: royalblue;
 
 }
 
 .txt{
     width:100%;
     height: 45%;
-    background-color: rgb(145, 145, 146);
 }
+
+#hr2{
+    width: 500px;
+    margin-top: 35px;
+    margin-bottom: 20px;
+}
+
+#headb{
+    margin-top: 20px;
+    font-size: 25px;
+    padding-top: 10px;
+}
+
+.parab{
+    
+    font-size: 15px;
+    padding-top: 15px;
+}
+#footer{
+    width: 100%;
+    height: 27%;
+    background-color:  rgb(234, 234, 236);
+}
+
+
+#textsfooter{
+    width: 100%;
+    height: 50px;
+    padding: 40px 100px ;
+    display: flex;
+    justify-content: space-around;
+
+}
+
+
