--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,99 @@ html,body{
     overflow-x: hidden; 
 
 }
+
+/* animation */
+#animation{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color:whitesmoke;
+    z-index: 99;
+    animation: anim6 4s cubic-bezier(0.19, 1, 0.22, 1) 7s both;
+    overflow: hidden;
+}
+
+
+@keyframes anim6{
+    to{
+        margin-top: -100%;
+    }
+
+}
+
+#wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 600px;
+    height: 600px;
+    position: absolute;
+    left: 50%;
+    top:50% ;
+    transform: translate(-50%,-50%);
+    animation:anim2 2s cubic-bezier(0.19, 1, 0.22, 1) 4s both;
+
+}
+#logosadhu{
+    width: 300px;
+    height: 300px;
+    display: flex;
+    border-radius: 50%;
+    background-color: orange;
+    align-items: center;
+    justify-content: center;
+    animation: anim1 3s cubic-bezier(0.19, 1, 0.22, 1) 1s both; 
+    
+}
+
+#logosadhu>img{
+    border-radius: 50%;
+    
+}
+
+@keyframes anim1{
+    50%{
+        transform: scale(2,2);
+    }
+
+    100%{
+        transform: scale(1,1);
+    }
+}
+
+@keyframes anim2{
+    to{
+        margin-top: -150px;
+    }
+
+}
+
+#txtdiv{
+    position: absolute;
+    left: 50%;
+    top:110% ;
+    transform: translate(-50%,-50%);
+    animation: anim3 3s cubic-bezier(0.19, 1, 0.22, 1) 5s both;
+    
+}
+#txt{
+    letter-spacing: 5px;
+    line-height: 40px;
+    font-size: 30px;
+    font-weight: bolder;
+
+}
+
+
+@keyframes anim3{
+    to{
+       top: 70%; 
+    }
+
+}
+
+
+/* animation ended */
 /* 
  designing navbar */
 nav{
@@ -175,25 +268,77 @@ COntent1 started */
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 150%;
+    height: calc(150% + 100px);
     background-color: #edecec;
+    flex-direction: column;
+    align-items: center;
     
+    
+}
+
+#titles{
+    display: block;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 30px;
+
+   
+}
+#titles>h4{
+    letter-spacing: 4px;
+    word-spacing: 2px;
+}
+
+#titles>img{
+    margin-bottom: 20px;
+   
 }
 
 .card-holder{
     width: 80%;
-    height: 100%;
     padding: 20px 65px;
 
+}
+
+#search{
+    height:  50px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 28px;
+    align-items: center;
+    font-size: 15px;
+    font-weight: 600;
+
+}
+
+#pad{
+    margin-left: 100px;
+}
+
+#search div{
+    display: flex;
+    align-items: center;
+}
+
+#arrow{
+    margin-right: 15px;
 }
 
 .card{
     float: left;
     margin: 10px 15px;
-    height: 45%;
+    height: 47%;
     width: 47%;
     background-color: whitesmoke;
 
+}
+
+.card:hover{
+    background-color: green;
 }
 
 .card-img{
@@ -214,6 +359,10 @@ COntent1 started */
     flex-direction: column;
     align-items: flex-start;
 
+}
+
+.card-text:hover{
+    background-color:rgb(189, 207, 161);
 }
 
 .smname{
@@ -354,18 +503,20 @@ COntent1 started */
 
 #header{
     margin-bottom: 25px;
+    font-size: 15px;
+    font-weight: 400px;
 
 }
 #smcards{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     height: 45%;
-    width: 65%;
+    width: 55%;
     margin-bottom: 15px;
 }
 .mcard{
-    width: 22%;
-    height: 98%;
+    width: 20%;
+    height: 90%;
 }
 
 .img{
@@ -387,13 +538,13 @@ COntent1 started */
 
 #headb{
     margin-top: 20px;
-    font-size: 25px;
+    font-size: 20px;
     padding-top: 10px;
 }
 
 .parab{
     
-    font-size: 15px;
+    font-size: 12px;
     padding-top: 15px;
 }
 #footer{
@@ -410,6 +561,15 @@ COntent1 started */
     display: flex;
     justify-content: space-around;
 
+
+}
+
+#txt-footer{
+    font-size: 15px;
+    color: green;
+    font-weight: 400px;
+    display: flex;
+    align-items: center;
 }
 
 
