--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "MONTSERRAT";
+    font-family: "Red Rose";
+    scroll-behavior: smooth;
 }
 
 html,body{
@@ -13,11 +14,13 @@ html,body{
 }
 
 /* animation */
+
+
 #animation{
     width: 100%;
     height: 100%;
     position: absolute;
-    background-color:whitesmoke;
+    background-color:#f3f3f3;
     z-index: 99;
     animation: anim6 4s cubic-bezier(0.19, 1, 0.22, 1) 7s both;
     overflow: hidden;
@@ -42,8 +45,15 @@ html,body{
     top:50% ;
     transform: translate(-50%,-50%);
     animation:anim2 2s cubic-bezier(0.19, 1, 0.22, 1) 4s both;
+}
+
+@keyframes anim2{
+    to{
+        margin-top: -160px;
+    }
 
 }
+
 #logosadhu{
     width: 300px;
     height: 300px;
@@ -52,14 +62,9 @@ html,body{
     background-color: orange;
     align-items: center;
     justify-content: center;
-    animation: anim1 3s cubic-bezier(0.19, 1, 0.22, 1) 1s both; 
-    
+    animation: anim1 3s cubic-bezier(0.19, 1, 0.22, 1) 1s both;
 }
 
-#logosadhu>img{
-    border-radius: 50%;
-    
-}
 
 @keyframes anim1{
     50%{
@@ -71,27 +76,39 @@ html,body{
     }
 }
 
-@keyframes anim2{
-    to{
-        margin-top: -150px;
-    }
-
+#logosadhu>img{
+    border-radius: 50%;
+    animation: anim5 5s cubic-bezier(0.19, 1, 0.22, 1) 1s  both;
+    
 }
+ @keyframes anim5{
+     20%{
+         transform: rotate(-360deg);
+     }
+     40%{
+        transform: rotate(360deg);
+     }
+     60%{
+        transform: rotate(-360deg);
+     }
+     80%{
+        transform: rotate(360deg);
+     }
+ }
+
 
 #txtdiv{
+    width: 100%;
+    height: 100px;
     position: absolute;
     left: 50%;
     top:110% ;
     transform: translate(-50%,-50%);
     animation: anim3 3s cubic-bezier(0.19, 1, 0.22, 1) 5s both;
-    
-}
-#txt{
-    letter-spacing: 5px;
-    line-height: 40px;
-    font-size: 30px;
-    font-weight: bolder;
-
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
 
 
@@ -101,6 +118,27 @@ html,body{
     }
 
 }
+
+#txt{
+    letter-spacing: 5px;
+    line-height: 40px;
+    font-size: 30px;
+    font-weight: bolder;
+
+}
+#txtdiv>h5{
+    letter-spacing: 2px;
+    font-size: 20px;
+}
+#txtdiv>h4{
+    font-family:'Big Shoulders Stencil Text', cursive ;
+    color: orange;
+    font-size: 30px;
+    letter-spacing: 6px;
+    margin-top: 15px;
+}
+
+
 
 
 /* animation ended */
@@ -122,7 +160,10 @@ nav{
 }
 
 #head{
+    font-family: 'Big Shoulders Stencil Text', cursive;
     font-size: 30px;
+    font-weight: 700;
+    letter-spacing: 5px;
 
 }
 .navclass{
@@ -150,6 +191,7 @@ nav{
     width: 100%;
     height: calc(100% - 30px);
     padding: 0 20px;
+
    
     
 }
@@ -190,12 +232,14 @@ nav{
     transform: rotate(270deg);
 
 }
+
 #jumbo-items2{
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
+    
     
 }
 #jumbo-items2>h1{
@@ -217,6 +261,13 @@ nav{
 
 }
 
+#btnid:hover{
+    background-color: whitesmoke;
+    color: black;
+    width:140px;
+    height: 35px;
+}
+
 #jumbo-items3>section{ 
     transform: rotate(-270deg);
 }
@@ -230,6 +281,16 @@ nav{
     right: calc(-400px + 40px);
 }
 
+
+#jumbo-items1>section:hover{
+    border: 1px solid white;
+    padding: 5px 5px;
+    
+}
+#jumbo-items3>section:hover{
+    border: 1px solid white;
+    padding: 5px 5px;
+}
 
 /* 
 COntent1 started */
@@ -457,8 +518,11 @@ COntent1 started */
     width: 250px;
     height: 40px;
     color: green;
+}
 
-
+#shopnow:hover{
+    background-color: white;
+    box-shadow: 1px 3px #96b5b3; 
 }
 
 #one{
@@ -572,4 +636,6 @@ COntent1 started */
     align-items: center;
 }
 
-
+#txt-footer:hover{
+    font-size: 17px;
+}
