--- a/css/main.css
+++ b/css/main.css
@@ -186,6 +186,8 @@ nav{
 .cart>i{
     margin-right: 20px;
 }
+
+
  /* jumbotron started */
 #banner{
     width: 100%;
@@ -513,11 +515,11 @@ COntent1 started */
 }
 
 #shopnow{
-    border: 3px solid green;
+    border: 3px solid rgb(133, 161, 133);
     padding:10px 10px 10px 10px ;
     width: 250px;
     height: 40px;
-    color: green;
+    color: rgb(133, 161, 133);
 }
 
 #shopnow:hover{
@@ -639,3 +641,57 @@ COntent1 started */
 #txt-footer:hover{
     font-size: 17px;
 }
+
+
+
+/* curtain menu */
+
+.overlay {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.9);
+    overflow-x: hidden;
+    transition: 0.5s;
+  }
+  
+  .overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+  }
+  
+  .overlay a {
+    padding: 20px;
+    text-decoration: none;
+    font-size: 30px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+  }
+  
+  .overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+  }
+  
+
+#function{
+    cursor:pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 20px;
+}
+ 
