--- a/css/main.css
+++ b/css/main.css
@@ -22,14 +22,15 @@ html,body{
     position: absolute;
     background-color:#f3f3f3;
     z-index: 99;
-    animation: anim6 4s cubic-bezier(0.19, 1, 0.22, 1) 7s both;
+    animation: anim6 4s cubic-bezier(0.19, 1, 0.22, 1) 7s  both;
     overflow: hidden;
 }
 
 
 @keyframes anim6{
     to{
-        margin-top: -100%;
+        margin-top: -200%;
+        display: none;
     }
 
 }
@@ -91,7 +92,7 @@ html,body{
      60%{
         transform: rotate(-360deg);
      }
-     80%{
+     100%{
         transform: rotate(360deg);
      }
  }
@@ -299,7 +300,7 @@ COntent1 started */
 
 #content1{
     width: 100%;
-    height: 200px;
+    min-height: 200px;
     background-color: white;
     padding: 80px 230px;
     display: flex;
@@ -331,7 +332,6 @@ COntent1 started */
     display: flex;
     justify-content: center;
     width: 100%;
-    height: calc(150% + 100px);
     background-color: #edecec;
     flex-direction: column;
     align-items: center;
@@ -342,7 +342,7 @@ COntent1 started */
 #titles{
     display: block;
     width: 100%;
-    height: 100px;
+    min-height: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -363,7 +363,8 @@ COntent1 started */
 .card-holder{
     width: 80%;
     padding: 20px 65px;
-
+    display: flex;
+    flex-wrap: wrap; 
 }
 
 #search{
@@ -392,7 +393,6 @@ COntent1 started */
 }
 
 .card{
-    float: left;
     margin: 10px 15px;
     height: 47%;
     width: 47%;
@@ -483,7 +483,7 @@ COntent1 started */
 #content3{
     display: flex;
     width: 100%;
-    height: 80%;
+    min-height: 600px;
     background-color: #f3f3f3;
     padding: 120px 210px;
     justify-content: space-between;
@@ -508,7 +508,6 @@ COntent1 started */
 
 #imgcntnt{
     width: 60%;
-    height: 100%;
     background-image: url("../image/blogup.jpg");
     background-position: center;
     background-size: cover;
@@ -555,7 +554,7 @@ COntent1 started */
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     background-color: #e7e6e6;
     align-items: center;
 }
@@ -622,7 +621,7 @@ COntent1 started */
 
 #textsfooter{
     width: 100%;
-    height: 50px;
+    /* height: 50px; */
     padding: 40px 100px ;
     display: flex;
     justify-content: space-around;
@@ -695,3 +694,157 @@ COntent1 started */
     margin-right: 20px;
 }
  
+
+
+/* making mobile perfect  */
+
+@media screen and (max-width:450px) {
+
+    #logosadhu{
+        width: 170px;
+        height: 170px;
+    }
+
+    #navid{
+        padding: 2px 5px;
+        /* justify-content: center; */
+    }
+
+    #head{
+        margin: 0 auto;
+    }
+
+    #banner{
+        padding: 0 5px;
+    }
+    
+    #p,#top,.cart{
+        display: none;
+    }
+
+    .same{
+        width: 10%;
+        padding: 10px;
+    }
+    #jumbo-items2{
+        width: 80%;
+    }
+
+    .a1>span{
+        width: 40px;
+        right: 22px;
+    }
+    
+
+    #jumbo-items2{
+        margin-top: 80px    ;
+        justify-content: center;
+    }
+
+    #jumbo-items2>h1{
+        font-size: 30px;
+    }
+
+    #content1{
+        min-height: 100px;
+        padding: 5px;
+    }
+    #title{
+        font-size: 15px;
+    }
+    #para{
+        font-size: 10px;
+    }
+    #titles{
+        margin-bottom: 0px;
+        min-height: 50px;
+    }
+    #titles>img{
+        margin-bottom: 10px;
+    }
+
+    .card-holder {
+        width: 100%;
+        padding: 15px 5px;
+    }
+
+    #search{
+        font-size: 10px;
+        padding: 0 5px;
+    } 
+
+    #pad{
+        margin-left: 10px;
+    } 
+
+    .card{
+        margin: 10px 0px;
+        width: 100%;
+        /* min-height:350px; */
+    } 
+    #content3{
+        padding: 10px 5px;
+        min-height: 200px;
+    }
+
+    #content-in{
+        font-size: 8px;
+    }
+    #imgcntnt{
+        width: 60%;
+        background-size:contain;
+        background-repeat: no-repeat;
+    }
+
+    #shopnow{
+        margin-top: 5px;
+        height: 25px;
+        width: 90px;
+        font-size: 12px;
+        padding: 1px;
+    }
+
+    .date{
+        margin-left: 80%;
+    }
+
+    #content5>hr:nth-child(1){
+        width: 100%;
+        margin-top: 0px;
+        margin-bottom: 10px;
+    }
+    #smcards{
+        width: 100%;
+        height: 30%;
+    }
+
+    .mcard{
+        width: 24%;
+        height: 100%;
+    }
+    .headb{
+        font-size: 10px;
+    }
+
+    .parab{
+        padding-top: 5px;
+        font-size: 7px;
+    }
+    #txt-footer{
+        font-size: 10px;
+    }
+    #txt-footer:hover{
+        font-size: 13px;
+    }
+
+    #hr2{
+        width: 100%;
+        margin-top: 5px;
+        margin-bottom: 8px;
+    }
+
+    #textsfooter{
+        font-size: 10px;
+        padding: 5px;
+    }
+  }
